--- a/templates/h1ds_core/base.html
+++ b/templates/h1ds_core/base.html
@@ -15,7 +15,7 @@
    </head>
    <body>
      <div id="header">
-       {% if user.is_authenticated %}logged in as {{ user.username }} <a href="/interface/profile/{{user.username}}">[edit]</a> // <a href="/logout">logout</a> {% else %}<a href="/openid/login">Log in </a>{% endif %} // <a href="/about/">about</a> // <a href="/development/">bug reports and feature requests</a>
+       {% if user.is_authenticated %}logged in as {{ user.username }} <a href="/interface/profile/{{user.username}}">[edit]</a> // <a href="/logout">logout</a> {% else %}<a href="/openid/login">Log in </a>{% endif %}</a>
        <div id="title">
 	 <a href="/">H1 Data Server</a>
 	 <div id="subtitle">
