openid template: don't tell people they have to be logged in to google

--- a/h1ds_core/templates/openid/login.html
+++ b/h1ds_core/templates/openid/login.html
@@ -37,7 +37,7 @@
 <p>
 You may already have an OpenID if you have a Google, Yahoo!, Flickr, Myspace, etc account. Some examples:
 <ul>
-  <li>Google ID: https://www.google.com/accounts/o8/id (while logged in to your Google account)</li>
+  <li>Google ID: https://www.google.com/accounts/o8/id</li>
   <li>Google profile: http://google.com/profiles/mark.oliphant (or, while logged in, go to http://google.com/profiles/me in a browser.)</li>
   <li>Livejournal: http://mark_oliphant.livejournal.com</li>
   <li>Blogger: http://mark_oliphants_blog.blogspot.com</li>
