--- a/h1ds_core/templates/h1ds_core/homepage.html
+++ b/h1ds_core/templates/h1ds_core/homepage.html
@@ -1,5 +1,6 @@
 {% extends 'h1ds_core/base.html' %}
+{% load h1ds_homepage %}
 
 {% block content %}
-Welcome to H1DS!
+{% h1ds_homepage %}
 {% endblock %}
