--- a/h1ds_core/app_media/h1ds_core/css/base.css
+++ b/h1ds_core/app_media/h1ds_core/css/base.css
@@ -263,6 +263,14 @@ background-color: #c1d6f3;
     text-align: center;
 }
 
+#mds-path-breadcrumb
+{
+    background-color: #f5f5f5;
+    margin: 0.5em;
+    padding: 0.5em;    
+    text-align: left;
+}
+
 table.side-table {
     font-size:75%;
 }
@@ -367,4 +375,16 @@ display:none;
 
 .unpopulated {
     background-color:#bababa;
+}
+
+.node-error {
+    background-color:#FFE0DF;
+    padding: 0.5em;
+    margin: 0.5em;
+}
+
+.node-data{
+    background-color:#ffffcc;
+    margin: 0.5em;
+    padding: 0.5em;
 }
