--- a/h1ds_core/app_media/h1ds_core/css/base.css
+++ b/h1ds_core/app_media/h1ds_core/css/base.css
@@ -384,7 +384,10 @@ display:none;
 }
 
 .node-data{
-    background-color:#ffffcc;
+
+    border-style:solid;
+    border-width:1px;
+    border-color:#eee;
     margin: 0.5em;
     padding: 0.5em;
 }
