add flot fillbetween js

--- a/h1ds_core/templates/h1ds_core/base.html
+++ b/h1ds_core/templates/h1ds_core/base.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="{{ MEDIA_URL }}h1ds_core/js/jquery-1.6.min.js"></script>
 	<!--[if IE]><script language="javascript" type="text/javascript" src="{{ MEDIA_URL }}h1ds_core/js/flot/excanvas.pack.js"></script><![endif]-->
 	<script type="text/javascript" src="{{ MEDIA_URL }}h1ds_core/js/flot/jquery.flot.js"></script> 
+	<script type="text/javascript" src="{{ MEDIA_URL }}h1ds_core/js/flot/jquery.flot.fillbetween.js"></script> 
 	<script type="text/javascript" src="{{ MEDIA_URL }}h1ds_core/js/h1ds.js"></script> 
 	<script language="javascript" type="text/javascript" src="{{ MEDIA_URL }}h1ds_core/js/flot/jquery.flot.navigate.js"></script> 
 	{% block extrahead %}{% endblock %}
