--- a/h1ds_core/app_media/h1ds_core/css/base.css
+++ b/h1ds_core/app_media/h1ds_core/css/base.css
@@ -19,6 +19,10 @@ a:hover {
 h1, h2, h3 {
 	margin:.8em 0 .2em 0;
 	padding:0;
+	color:#555;
+	background:#f5f5f5;
+	text-align:center;
+	font-family: arial, serif;
 }
 p {
 	margin:.4em 0 .8em 0;
@@ -122,7 +126,7 @@ img {
 .col3 {
 	float:left;
 	position:relative;
-	padding:0 0 1em 0;	/* no left and right padding on columns, we just make them narrower instead 
+	padding:0.5em 0 1em 0;	/* no left and right padding on columns, we just make them narrower instead 
 					only padding top and bottom is included here, make it whatever value you need */
 	overflow:hidden;
 }
@@ -136,7 +140,7 @@ img {
 }
 .threecol .colleft {
 	right:60%;			/* width of the middle column */
-	background:#f4f4f4;	/* left column background colour */
+	background:#eee;	/* left column background colour */
 }
 .threecol .col1 {
 	width:58%;			/* width of center column content (column width minus padding on either side) */
@@ -411,6 +415,31 @@ display:none;
 }
 
 .mds-filter input {
+  border: 1px solid #bbb;
+  color:#555;
+  display:inline;
+  margin: 0 0 0 3px;
+}
+
+
+#request-shot {
+    background-color:white;
+    margin: 3px;
+    padding: 5px;
+    overflow:hidden;
+    color:#555;
+
+}
+
+#request-shot span.left {
+    float:left;
+}
+
+#request-shot span.right {
+    float:right;
+}
+
+#request-shot input {
   border: 1px solid #bbb;
   color:#555;
   display:inline;
