--- a/h1ds_summary/templates/h1ds_summary/no_attributes.html
+++ b/h1ds_summary/templates/h1ds_summary/no_attributes.html
@@ -1,3 +1,3 @@
 {% extends "h1ds_summary/summary_base.html" %}
 
-{% block summarycontent%}No summary attributes found.{% endblock summarycontent %}
+{% block summarycontent%}<div class="warning">No summary attributes found.</div>{% endblock summarycontent %}
