--- a/h1ds_summary/templates/h1ds_summary/no_shots.html
+++ b/h1ds_summary/templates/h1ds_summary/no_shots.html
@@ -1,3 +1,3 @@
 {% extends "h1ds_summary/summary_base.html" %}
 
-{% block summarycontent%}No shots found.{% endblock summarycontent %}
+{% block summarycontent%}<div class="warning">No shots found.</div>{% endblock summarycontent %}
