--- a/h1ds_summary/templates/h1ds_summary/summary_base.html
+++ b/h1ds_summary/templates/h1ds_summary/summary_base.html
@@ -13,7 +13,7 @@
 {% if perms.h1ds_summary.add_summaryattribute %}
 <h3>add attribute</h3>
 <div class="sidebarcontent">
-<FORM action="{% url add-summary-attribute %}" method="post">{% csrf_token %}
+<FORM action="{% url get-summary-attribute-form-from-url %}" method="post">{% csrf_token %}
     <span class="left">url</span>
     <span class="right">
     <INPUT type="text" size=20 id="url" name="url">
