--- a/h1ds_summary/templates/h1ds_summary/summary_base.html
+++ b/h1ds_summary/templates/h1ds_summary/summary_base.html
@@ -1,5 +1,58 @@
 {% extends "h1ds_core/base.html" %}
 
+{% load templatetable %}
+
+{% block leftpanel %}
+
+<h3>enable attributes</h3>
+<table width="100%" class="side-table">
+  {% table item excluded_attrs 2 %}
+  {% if table.startrow %}
+  {% if table.oddrow %}
+  <tr class="highlight">
+    {% else %}
+  <tr>
+    {% endif %}
+    {% endif %}
+    {% if table.lastcellinrow %}
+    <td class="{% if table.oddrow %}highlightableCell {% endif %}cellAutoAdjust">
+      {% else %}
+    <td class="{% if table.oddrow %}highlightableCell {% endif %}left cellAutoAdjust">
+      {% endif %}
+      <div class="options displayNone"></div>
+      <a href="?enable_attr={{item}}">{{item}}</a>
+    </td>
+    {% if table.endrow %}
+  </tr>
+  {% endif %}
+  {% endtable %}
+</table>
+
+<h3>disable attributes</h3>
+<table width="100%" class="side-table">
+  {% table item included_attrs 2 %}
+  {% if table.startrow %}
+  {% if table.oddrow %}
+  <tr class="highlight">
+    {% else %}
+  <tr>
+    {% endif %}
+    {% endif %}
+    {% if table.lastcellinrow %}
+    <td class="{% if table.oddrow %}highlightableCell {% endif %}cellAutoAdjust">
+      {% else %}
+    <td class="{% if table.oddrow %}highlightableCell {% endif %}left cellAutoAdjust">
+      {% endif %}
+      <div class="options displayNone"></div>
+      <a href="?disable_attr={{item}}">{{item}}</a>
+    </td>
+    {% if table.endrow %}
+  </tr>
+  {% endif %}
+  {% endtable %}
+</table>
+{% endblock %}
+
 {% block content %}
 {% block summarycontent%}{% endblock summarycontent %}
 
@@ -16,5 +69,17 @@
     <INPUT title="add attribute" type="submit" value="&#x21b5;"></span>
  </FORM>
 </div>
+
+<h3>SQL query</h3>
+<div class="sidebarcontent fullform">
+<form action="{% url raw-sql %}" method="post">{% csrf_token %}
+  <span class="left">select</span>
+    <INPUT style="width:100%" type="text" id="select" name="select" value="{{select}}"/>
+    <span class="left">where</span>
+    <textarea style="width:100%" id="where" name="where">{{where}}</textarea>
+    <INPUT title="submit query" type="submit" value="&#x21b5;" />
+</form>
+</div>
 {% endif %}
+
 {% endblock rightpanel %}
