add warning template block

--- a/h1ds_core/templates/h1ds_core/base.html
+++ b/h1ds_core/templates/h1ds_core/base.html
@@ -27,6 +27,7 @@
 	<div class="colleft">
 	  <div class="col1wrap">
 	    <div class="col1">
+	      {% block warning %}{% endblock warning %}
 	      {% block content %}
 	      {% endblock %}
 	    </div>
