--- a/h1ds_core/templates/h1ds_core/base.html
+++ b/h1ds_core/templates/h1ds_core/base.html
@@ -16,8 +16,8 @@
   <body>
     <div id="header">
       <p>
-	{% if user.is_authenticated %}logged in as {{ user.username }} <a href="/interface/profile/{{user.username}}">[edit]</a> // <a href="{% url h1ds-logout %}">logout</a> 
-	{% else %}<a href="/openid/login">Log in </a>
+	{% if user.is_authenticated %}{{ user.username }} // <a href="/user/settings/{{user.username}}">settings</a> // <a href="{% url h1ds-logout %}">logout</a> 
+	{% else %}<a href="/openid/login">Log in</a>
 	{% endif %}
       </p>
       {% h1ds_header %}
