clean up user settings page

--- a/h1ds_core/static/css/base.css
+++ b/h1ds_core/static/css/base.css
@@ -329,3 +329,14 @@ table.main-table td {
 .fullform form input, textarea {
     margin:1px;
 }
+
+#full-content {
+    clear:both;
+    float:left;
+    width:100%;
+    margin:1em 3em 1em 3em;
+}
+
+.prefform {
+    margin-left:2em;
+}
