--- a/h1ds_core/templates/h1ds_core/userprofile.html
+++ b/h1ds_core/templates/h1ds_core/userprofile.html
@@ -1,8 +1,15 @@
-{% extends "h1ds_core/base.html" %}
+{% extends "h1ds_core/base_single_col.html" %}
 
 {% block content %}
+<h2>Profile</h2>
+<div class="prefform">
 <form action="{{return_url}}" method="post">{% csrf_token %}
 {{ form.as_p }}
 <input type="submit" value="Submit" />
 </form>
+</div>
+<h2>Wiki settings</h2>
+<div class="prefform">
+<p><a href="/wiki/?action=userprefs&sub=prefs">Click here to edit your wiki settings.</a></p>
+</div>
 {% endblock %}
