--- a/moin_static/h1ds/css/screen.css
+++ b/moin_static/h1ds/css/screen.css
@@ -12,6 +12,7 @@ Copyright (c) 2001, 2002, 2003 by Juergen Hermann
 body {
     padding: 0;
     border: 0;
+    font-size: 90%;
 }
 
 a:link { text-decoration: none; }
@@ -61,6 +62,14 @@ textarea {
     width:100%;
     text-align:right;
 }
+
+#header p,
+#header h1,
+#header h2 {
+    padding:.4em 15px 0 15px;
+    margin:0;
+}
+
 #header {
     border-bottom:1px solid #000;
 }
