--- a/h1ds_core/static/css/base.css
+++ b/h1ds_core/static/css/base.css
@@ -312,7 +312,7 @@ table.data {
     border: 1px #69C solid;
     border-collapse: collapse;
     border-spacing: 0px;
-    margin-top: 30px,
+    margin-top: 30px;
     margin-bottom: 30px;
 }
 
