--- a/h1ds_core/templates/h1ds_core/base_single_col.html
+++ b/h1ds_core/templates/h1ds_core/base_single_col.html
@@ -22,6 +22,13 @@
       </p>
       {% h1ds_header %}
     </div>
+    {% if messages %}
+    <div id="message"><ul>
+      {% for message in messages %}
+      <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+      {% endfor %}</ul>
+    </div>
+    {% endif %}
     {% block full_content %}
     <div id="full-content">{% block content %}{% endblock %}</div>
     {% endblock %}
