match wiki style to h1ds header

--- a/moin_static/h1ds/css/screen.css
+++ b/moin_static/h1ds/css/screen.css
@@ -68,6 +68,11 @@ textarea {
     text-align:right;
 }
 
+#loginlinks {
+    padding-top:5px;
+    padding-right:10px;
+}
+
 #header p,
 #header h1,
 #header h2 {
