--- a/h1ds_configdb/templates/h1ds_configdb/configdb_home.html
+++ b/h1ds_configdb/templates/h1ds_configdb/configdb_home.html
@@ -29,15 +29,15 @@
     <td><a href="/configurations/kh0.00/">Standard</a></td>
     <td>0.0</td>
     <td>1.0</td>
-    <td><img src="{{ STATIC_URL }}/configdb/poincare/kh0.00-phi0_small.png" height="50%"></td>
-    <td><img src="{{ STATIC_URL }}/configdb/iotabar/iotabar_kh0.00_small.png" height="50%"></td>
+    <td><img src="{{ STATIC_URL }}configdb/poincare/kh0.00-phi0_small.png" height="50%"></td>
+    <td><img src="{{ STATIC_URL }}configdb/iotabar/iotabar_kh0.00_small.png" height="50%"></td>
   </tr>
   <tr>
     <td><a href="/configurations/kh1.00/">Full helical</a></td>
     <td>1.0</td>
     <td>1.0</td>
-    <td><img src="{{ STATIC_URL }}/configdb/poincare/kh1.00-phi0_small.png" height="50%"></td>
-    <td><img src="{{ STATIC_URL }}/configdb/iotabar/iotabar_kh1.00_small.png" height="50%"></td>
+    <td><img src="{{ STATIC_URL }}configdb/poincare/kh1.00-phi0_small.png" height="50%"></td>
+    <td><img src="{{ STATIC_URL }}configdb/iotabar/iotabar_kh1.00_small.png" height="50%"></td>
   </tr>
 
 </table>
