--- a/h1ds_core/templates/openid/login.html
+++ b/h1ds_core/templates/openid/login.html
@@ -4,7 +4,8 @@
 
 
 {% block content %}
-
+<div class="fixed-center">
+<div class="mbox">
 <h1>Log in</h2>
 
 <br/>
@@ -47,6 +48,9 @@
 </form>
 
 <br/>
+</div>
+<div class="mbox">
+<h2>About OpenID</h2>
 <p>
 You may already have an OpenID if you have a Google, Yahoo!, Flickr, Myspace, etc account. Some examples:
 <ul>
@@ -58,6 +62,9 @@ You may already have an OpenID if you have a Google, Yahoo!, Flickr, Myspace, et
 More are listed <a href="http://en.wikipedia.org/wiki/OpenID_providers">here</a>.
 </p>
 <p>If you don't have an exiting openID account, you can create one here: <a href="https://www.myopenid.com/signup">https://www.myopenid.com/signup</a></p>
+</div>
+<div class="mbox">
+<h2>Please note:</h2>
 <p>
 After you have logged in for the first time:
 <ul> 
@@ -68,4 +75,6 @@ After you have logged in for the first time:
 <p>
 Note that within ANU you can often abbreviate URLs in your browser, i.e. http://h1svr.anu.edu.au/wiki as http://h1svr/wiki. The OpenID login will recognise whichever URL format you use when you login (i.e. whether you log in from http://h1svr.anu.edu.au/openid/login or http://h1svr/openid/login). There is no problem with logging in to both, just be aware that if you suddenly appear to be logged out, this could be the reason.
 </p>
+</div>
+</div>
 {% endblock %}
