put masonry back on login page

--- a/h1ds_core/templates/openid/login.html
+++ b/h1ds_core/templates/openid/login.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-<div class="fixed-center">
+<div class="fixed-center" id="masonry-container">
 <div class="mbox">
 <h1>Log in</h2>
 
