--- a/h1ds_core/static/css/style.css
+++ b/h1ds_core/static/css/style.css
@@ -715,6 +715,7 @@ table.side-table {
    ============================================================ */
 
 .column { float: left; padding-bottom: 100px; }
+.dummycolumn { float: left; padding-bottom: 100px; }
 .w20 { width: 20%}
 .w40 { width: 40%}
 .w60 { width: 60%}
