remove h1 specific code. refs #1

--- a/h1ds_core/templates/openid/login.html
+++ b/h1ds_core/templates/openid/login.html
@@ -69,11 +69,8 @@ More are listed <a href="http://en.wikipedia.org/wiki/OpenID_providers">here</a>
 After you have logged in for the first time:
 <ul> 
 <li>click on [edit] in the top right of the screen and change your username to FirstnameLastname (First letters capitalised, with no spaces) -- e.g. MarkOliphant</li>
-<li>you will need to request write access to the H-1 wiki. Contact the data system administrator for this.</li>
+<li>you will need to request write access to the wiki. Contact the data system administrator for this.</li>
 </ul>
-</p>
-<p>
-Note that within ANU you can often abbreviate URLs in your browser, i.e. http://h1svr.anu.edu.au/wiki as http://h1svr/wiki. The OpenID login will recognise whichever URL format you use when you login (i.e. whether you log in from http://h1svr.anu.edu.au/openid/login or http://h1svr/openid/login). There is no problem with logging in to both, just be aware that if you suddenly appear to be logged out, this could be the reason.
 </p>
 </div>
 </div>
