--- a/h1ds_core/static/css/style.css
+++ b/h1ds_core/static/css/style.css
@@ -732,6 +732,34 @@ table.side-table {
 .ui-sortable-placeholder * { visibility: hidden; }
 
 
+/* ============================================================
+   for d3.js
+   ============================================================ */
+
+
+path {
+    stroke-width: 1;
+    stroke: #0000FF;
+    fill: none;
+    stroke-opacity:0.8
+}
+
+.path-filled {
+    fill: #0000FF;
+    fill-opacity:0.6;
+}
+ 
+line {
+    stroke: #999;
+    stroke-width:1px;
+}
+ 
+text {
+    font-family: Arial;
+    font-size: 9pt;
+}
+
+
 
 /* ==|== non-semantic helper classes ========================================
    Please define your styles before this section.
